<resources>
    <string name="app_name">Kotlin - Projeto Integrador 21</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="login">Login</string>
    <string name="register">CADASTRO</string>
    <string name="resetPass">RECUPERAÇÃO DE SENHA</string>
    <string name="click.goResetPass">Esqueceu a Senha?</string>
    <string name="digite.email">Digite seu email</string>
    <string name="digite.senha">Digite sua senha</string>
    <string name="click.register">Quero me cadastrar</string>
    <string name="btn.register">Cadastre-se</string>
    <string name="btn.login">Login</string>
    <string name="btn.send">ENVIAR</string>
    <string name="click.backLogin">Voltar para Login</string>
    <string name="digite_nome">Digite seu nome</string>
    <string name="digite_idade">Digite sua idade</string>
    <string name="idade">Idade:</string>
    <string name="digite_cpf">Digite seu CPF</string>
    <string name="CPF">CPF:</string>
    <string name="telefone">Telefone:</string>
    <string name="digite.telefone">Digite seu Telefone</string>
    <string name="resetText">Informe o email da conta que deseja redefinir a senha!</string>
    <string name="realizar_cadastro">Realizar Cadastro</string>
    <string name="nossos_armarios">Nossos Armarios!</string>
    <string name="senha">Senha:</string>
    <string name="email">Email:</string>
    <string name="seja_bem_vindo">Seja Bem Vindo!</string>
    <string name="Nome">Nome Completo:</string>
    <string name="JaPossuiConta">Já possui conta? Realizar Login</string>
    <string name="nova_senha">Nova senha:</string>
    <string name="insira_sua_nova_senha">Insira sua nova senha:</string>
    <string name="alterar_a_senha">Alterar a Senha</string>
    <string name="confirme_a_senha">Confirme a senha:</string>
    <string name="alterar_senha">ALTERAR SENHA</string>
    <string name="preencha_com_seu_e_mail_de_registro">Preencha com seu E-MAIL de registro:</string>
    <string name="btnBuy">Alugar</string>
    <string name="click.creditCard">Credit Card Here</string>
    <string name="confirmar_e_mail">Confirmar E-MAIL:</string>
    <string name="e_mail">E-MAIL</string>
    <string name="enviar">enviar</string>
    <string name="local_name">Local:</string>
    <string name="local_address">Endereço:</string>
    <string name="manager_name">manager_name</string>
    <string name="carteira">Carteira</string>
    <string name="config">Configurações</string>
    <string name="smartlocker">SmartLocker</string>
    <string name="header_description">Menu</string>
    <string name="desc_image_header">Imagem do navigationDrawer da tela Menu</string>
    <string name="back">back</string>
    <string name="apelidoCard">Digite o apelido do cartão</string>
    <string name="cards">Cadastrar Cartão</string>
    <string name="contato_aqui">Entre em contato aqui!</string>
    <string name="problemas">Problemas?</string>
    <string name="email_contato">supssmartlocker@gmail.com</string>
    <string name="sair">Sair</string>
    <string name="alugar">Alugar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="pagar">Pagar</string>
    <string name="confirmar_loca_o">Confirmar locação</string>
    <string name="nomeArmario">Nome do Armário</string>
    <string name="valor1">30min = R$ 30,00</string>
    <string name="valor2">1h = R$ 50,00</string>
    <string name="valor3">2h = R$ 100,00</string>
    <string name="valor4">4h = R$ 150,00</string>
    <string name="localizaArmario">Localização do Armário</string>
    <string name="precoArmario">Preço de Armário</string>
    <string name="gerenteArmario">Gerente do Armário</string>
    <string name="apelido_card_1">Apelido card 1</string>
    <string name="apelido_card_2">Apelido card 2</string>
    <string name="apelido_card_3">Apelido card 3</string>
    <string name="apelido_card_4">Apelido card 4</string>
    <string name="selecione_o_cart_o_desejado">Selecione o cartão desejado</string>
    <string name="tirar_foto">Tirar Foto</string>
    <string name="data_nascimento">Data de Nascimento:</string>
    <string name="selecione_sua_dataNasc">Selecione sua Data de Nascimento</string>
    <string name="exibir_informa_es_do_gerente">Exibir informações do Gerente</string>
    <string name="liberar_loca_o">Liberar Locação</string>
    <string name="gerenciar_arm_rios">Gerenciar Armários!</string>
    <string name="acessar_loca_o">Acessar Locação</string>
    <string name="primeira_pessoa">Primeira Pessoa</string>
    <string name="centralize_o_rosto_do_cliente_na_c_mera">Centralize o rosto do cliente na câmera:</string>
    <string name="confirmar">Confirmar</string>
    <string name="mensagem_de_valida_o">Mensagem de Validação</string>
    <string name="telefone_do_gerente">Telefone do Gerente</string>
    <string name="ler_qr_code">Ler QR-Code:</string>
    <string name="quantas_pessoas_acessar_o_o_arm_rio">Quantas pessoas acessarão o armário?</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="voltar">Voltar</string>
    <string name="nome_do_gerente">Nome do Gerente</string>
    <string name="foto">Foto</string>
    <string name="gerente_ativo">GERENTE ATIVO</string>
    <string name="cpf_do_gerente">CPF do Gerente</string>
    <string name="localidade_do_gerente">Localidade do Gerente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verificar">Verificar</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="locador">Locador:</string>
    <string name="proximo">Proximo</string>
    <string name="segunda_pessoa">Segunda Pessoa</string>
    <string name="registrarCartao">Registrar Cartão</string>
    <string name="ApelidoCartao">De um apelido ao seu cartão</string>
    <string name="NomeCartao">Nome do Títular</string>
    <string name="NumeroCartao">Número do Cartão</string>
    <string name="mes_ano">Mes/Ano</string>
    <string name="mm_aa">MM/AA</string>
    <string name="cvv">CVV</string>
    <string name="linkando_pulseira_nfc_ao_dispositivo">Linkando pulseira NFC ao dispositivo</string>
    <string name="pr_ximo">Próximo</string>
    <string name="posicione_a_sua_pulseira_pr_ximo_ao_telefone">Posicione a sua pulseira próximo ao telefone</string>
    <string name="nfc">NFC</string>
    <string name="voltarbtn" />
    <string name="linkar_tag">lINK TAG</string>
    <string name="read_tag">Read Tag</string>
    <string name="continuar">Continuar</string>
    <string name="dados_do_qr_code">Dados do QR Code:</string>
    <string name="prosseguir">Prosseguir</string>
    <string name="dados_da_tag_nfc">Dados da Tag NFC:</string>
    <string name="quantas_pessoas_alocaram_o_arm_rio">Quantas pessoas alocaram o armário?</string>
    <string name="posicione_pulseira">Posicione a sua pulseira próximo ao telefone</string>
    <string name="dados_do_nfc">Dados do NFC</string>
    <string name="lendo_pulseira_nfc">Lendo pulseira NFC...</string>
    <string name="limpar_nfc">LIMPAR NFC</string>
    <string name="retornar">Retornar</string>
    <string name="abrir_arm_rio">Abrir Armário</string>
    <string name="limpando_dados_da_pulseira_nfc">Limpando dados da pulseira NFC</string>
    <string name="perfil">Perfil</string>
</resources>