<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/lockerLocName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local_name" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backLogin"
        android:layout_width="46dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="336dp"
        android:background="@drawable/setinha_voltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lockerManaName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lockerLocAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local_address" />


    <fragment
        android:id="@+id/map_fragment"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</FrameLayout>